# optix-renderer

./: .gitignore  .gitmodules  CMakeConfig.txt  CMakeLists.txt  README.md  file-categories.md  install-dependencies.bat  install-dependencies.sh  project.md  variance_plotter.py
docs/: CMakeLists.txt  Doxyfile
ext/: README.md
ext/cmake/: FindIlmBase.cmake  FindOpenEXR.cmake  FindOpenVDB.cmake  FindTBB.cmake
ext/eigen/: .gitignore
ext/filesystem/filesystem/: path.h
ext/glad/: CMakeLists.txt
ext/hypothesis/: cephes.h
ext/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp
ext/lodepng/: CMakeLists.txt
ext/lodepng/src/: lodepng.cpp
ext/nanogui/: CMakeLists.txt
ext/nanogui/src/: nanogui.cpp
ext/sutil/: Scene.cpp
include/nori/: DebugGui.h  HDRLoader.h  ImguiHelpers.h  ImguiScreen.h  NvdbVolume.h  PreviewIntegrator.h  adaptive.h  block.h  bsdf.h  camera.h  color.h  common.h  denoiser.h  dpdf.h  emitter.h  environmentmap.h  frame.h  glutil.h  integrator.h  kdtree.h  medium.h  mesh.h  normals.h  object.h  perspective.h  phase.h  render.h  rfilter.h  sampler.h  scene.h  shape.h  sphere.h  texture.h  transform.h  volume.h  warp.h
include/nori/optix/: OptixRenderer.cpp  OptixRenderer.h  OptixSbtTypes.h  OptixState.as.cpp  OptixState.cpp  OptixState.denoiser.cpp  OptixState.h  OptixState.render.cpp  OptixState.rtc.cpp
reports/project-proposal/: report.html
reports/project-report/: adaptive.html  anisotropic.html  blender.html  denoising.html  depthOfField.html  disney.html  dof.html  emissive_medium.html  emitters.html  enori.html  envmap.html  final-project-report.html  heterogenous_media.html  images.html  index.html  misc-roger.html  normal.html  normals.html
reports/report-ex1/: pa1-report.html
reports/report-ex2/: Busenhart-Matthias-report.html
reports/report-ex3/: Buenhart-Matthias-report.html  Busenhart-Matthias-report.html
reports/report-ex4/: Busenhart-Matthias-report.html
scenes/: .gitignore
scenes/pa1/: ajax-av.exr  ajax-av.xml  ajax-normals.exr  ajax-normals.xml  mesh-texture.exr  mesh-texture.xml  sphere-analytic.exr  sphere-analytic.xml  sphere-mesh.exr  sphere-mesh.xml  sphere-texture.exr  sphere-texture.xml  sponza-av.exr  sponza-av.xml  sponza-direct.exr  sponza-direct.xml  test-av.xml  test-direct.xml  test-sponza.xml
scenes/pa3/odyssey/: odyssey_ems.exr  odyssey_ems.xml  odyssey_mats.exr  odyssey_mats.xml  odyssey_mis.exr  odyssey_mis.xml
scenes/pa3/sphere/: point_ems.exr  point_ems.xml  sphere2_ems.exr  sphere2_ems.xml  sphere2_mats.exr  sphere2_mats.xml  sphere2_mesh_ems.exr  sphere2_mesh_ems.xml  sphere_ems.exr  sphere_ems.xml  sphere_mats.exr  sphere_mats.xml  sphere_mesh_ems.exr  sphere_mesh_ems.xml
scenes/pa3/tests/: test-mesh-furnace.xml  test-mesh.xml
scenes/pa3/veach_mi/: veach_ems.exr  veach_ems.xml  veach_mats.exr  veach_mats.xml  veach_mis.exr  veach_mis.xml
scenes/pa4/cbox/: cbox_path_mats.xml  cbox_path_mis.xml  cbox_path_mis_optix.xml  cbox_path_vol_mats.xml  cbox_path_vol_mis.xml  cbox_pmap.xml
scenes/pa4/clocks/: clocks.xml
scenes/pa4/table/: table_path_mats.exr  table_path_mats.xml  table_path_mis.exr  table_path_mis.xml  table_pmap.exr  table_pmap.xml
scenes/pa4/tests/: test-direct.xml  test-furnace.xml
scenes/project/denoiser/: denoise.py  denoiser-test.xml
scenes/project/disney/: camel.blend  disney-test.xml  disney-validation-blender.xml  disney.xml  disney_1vs1 (copy).xml  disney_camel.xml  disney_sphere.xml  disney_validation.xml  generate_scene.py  sphere.blend
scenes/project/dof/: dof-val.blend  dof-val.xml  table_path_mis.xml
scenes/project/envmap/: envmap-test.xml  envmap_cube.xml  envmap_sphere.xml  envmap_test.xml  envmap_test_sphere.xml  textures.xml  validation.blend
scenes/project/meshes/: camel_export_blender.mtl
scenes/project/normalmap/: normals-camel.blend  normals-camel.xml  normals-example.xml  normals-identity-direct.xml  normals-identity-ref.xml  normals-identity-x.xml  normals-identity-y.xml  normals-identity.xml  normals-primities.xml  normals-primitives-direct.xml  normals-primitives.xml  normals-test.blend  normals-test.xml
scenes/project/normals/: sphere-normal-map.xml
scenes/project/optix/: sphere-analytic.xml
scenes/project/spotlight/: blender-validation.xml  camel.blend  cups.blend  spot.xml  spotlight-validation.xml
src/: DebugGui.cpp  ImGuiHelpers.cpp  ImguiScreen.cpp  PNGTexture.cpp  PreviewIntegrator.cpp  adaptive.cpp  anisophase.cpp  arealight.cpp  av.cpp  bitmap.cpp  bvh.cpp  camera.cpp  checkerboard.cpp  chi2test.cpp  common.cpp  consttexture.cpp  denoiser.cpp  dielectric.cpp  diffuse.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  disney.cpp  emitter.cpp  environmentmap.cpp  glutil.cpp  independent.cpp  isophase.cpp  main.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normals.cpp  obj.cpp  parser.cpp  path_mats.cpp  path_mis.cpp  perspective.cpp  photon.cpp  (+14 more)
src/bsdf/: anisophase.cpp  dielectric.cpp  diffuse.cpp  disney.cpp  isophase.cpp  microfacet.cpp  mirror.cpp  schlickphase.cpp
src/cameras/: camera.cpp  perspective.cpp  rfilter.cpp
src/denoiser/: simple.cpp
src/emitters/: arealight.cpp  directionalLight.cpp  emitter.cpp  environmentmap.cpp  pointlight.cpp  spotlight.cpp  volumelight.cpp
src/integrators/: EnvMapTester.cpp  PreviewIntegrator.cpp  av.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  normals.cpp  path_mats.cpp  path_mis.cpp  path_vol_mats.cpp  path_vol_mis.cpp  photonmapper.cpp
src/media/: heterogmedium.cpp  homogmedium.cpp  medium.cpp  vacuum.cpp
src/samplers/: adaptive.cpp  independent.cpp
src/shapes/: mesh.cpp  obj.cpp  shape.cpp  sphere.cpp  volume.shape.cpp  volume.vdb.cpp
src/textures/: NvdbVolume.cpp  NvdbVolume.vdb.cpp  PNGTexture.cpp  checkerboard.cpp  consttexture.cpp
src/utils/: ImGuiHelpers.cpp  ImguiScreen.cpp  block.cpp  bvh.cpp  chi2test.cpp  common.cpp  hdrToLdr.cpp  main.cpp  parser.cpp  render.cpp  scene.cpp  transform.cpp  ttest.cpp  warp.cpp  warptest.cpp
(+58 files in other folders)
